# cascade

./: .gitignore  BLOG.md  BUSINESS_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  index.md  owasp.md  rules.md  strategies.md  usage.md
docs/plans/: roadmap-v2.md
examples/: cookbook_langchain.py  cookbook_openai.py  demo_full_flow.py
src/cascade/: __init__.py  _audit.py  _injection.py  _store.py  actions.py  c1_gate.py  c2_trigger.py  c3_selector.py  c4_feedback.py  cli.py  linkage.py  rules.py
src/cascade/adapters/: __init__.py  _base.py  anthropic.py  autogen.py  crewai.py  gemini.py  langchain.py  mcp.py  openai.py
src/cascade/audit/: __init__.py  _report.py
src/cascade/policies/: __init__.py  yaml_loader.py
src/cascade/presets/: __init__.py
tests/: test_adapters.py  test_c1_gate.py  test_c2_trigger.py  test_c3_selector.py  test_c4_feedback.py  test_cli.py  test_emergence.py  test_examples.py  test_guard.py  test_injection.py  test_linkage.py  test_report.py  test_rules.py
tests/policies/: composite.yaml  strict.yaml
tmp_home/: test_cli_check_policy.py  test_phase2_smoke.py
tmp_home/.cascade/: audit.jsonl
tmp_home/.cascade/checkpoints/: c3_integ.json  c3_single.json  c3_test.json  feedback_history.json
