[project]
name = "agent-armour"
version = "0.9.0"
description = "Guard LLM tool calls with rules, scoring, and audit trails."
authors = [{ name = "cascade" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["llm", "agent", "tools", "governance", "guardrails"]

[project.scripts]
cascade = "cascade.cli:main"

[project.urls]
homepage = "https://github.com/white-moonkui/cascade"
repository = "https://github.com/white-moonkui/cascade"
documentation = "https://github.com/white-moonkui/cascade#readme"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.30"]
gemini = ["google-genai>=1.0"]
autogen = ["pyautogen>=0.2"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7", "ruff>=0.6", "pyright>=1.1"]

[tool.setuptools.package-data]
cascade = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
include = ["src/cascade"]
exclude = ["**/__pycache__", "build", "dist"]
typeCheckingMode = "basic"
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportUnknownMemberType = false
